# hpdft

./: .gitignore  CHANGELOG.md  LICENSE  Main.hs  Pdf.hs  PdfCharDict.hs  PdfCmap.hs  PdfObj.hs  PdfOutlines.hs  PdfStream.hs  README.md  Sample.hs  TuiPreview.hs  characters.hs  hpdft.cabal  hpdft.hs  main.hs
.github/workflows/: ci.yml
app/: TuiGeometry.hs  TuiPreview.hs  TuiScroll.hs  hpdft.hs
app/Cli/: Common.hs  Grep.hs  Misc.hs  Parser.hs  Text.hs  View.hs
data/fixtures/expected/: geometry.txt  incremental.txt  indirect-length.txt  multipage.txt  paragraphs.txt  tagged.txt
data/fixtures/expected-geom/: binary-endstream.txt  classic.txt  cmap-jis-h.txt  encrypted-rc4.txt  incremental.txt  indirect-length.txt  negative-fraction-ctm.txt  objstm.txt  paragraphs.txt  tagged.txt  xrefstream.txt
data/fixtures/expected-legacy/: binary-endstream.txt  classic.txt  cmap-unijis.txt  encrypted-rc4.txt  geometry.txt  multipage.txt  negative-fraction-ctm.txt  objstm.txt  tagged.txt  xrefstream.txt
data/map/: Adobe-Japan1-6.map  cidmapToList.hs  cp932.map  jisx0208.map
data/sample/: Sample.hs
dev/: 0.3-roadmap.md  0.4-roadmap.md  0.5-roadmap.md  0.5-text-ux.md  README.md  cmap-support.md  performance-0.4.md
docs/: 0.3-roadmap.md  0.4-roadmap.md  library.md
examples/extract-text/: Main.hs
examples/page-api/: Main.hs
helper/: cidmapToList.hs
sample/: Sample.hs
scripts/: bench_book.sh  bench_pages.hs  gen_fixtures.hs  gen_fixtures.py  inspect_font.hs  interpret_page.hs  verify_text.sh  verify_xref.sh
src/PDF/: CFF.hs  Character.hs  Cmap.hs  ContentStream.hs  ContentStream.hs~  Definition.hs  Diff.hs  Document.hs  DocumentStructure.hs  Encrypt.hs  Error.hs  FormExtract.hs  Image.hs  Interpret.hs  Layout.hs  Matrix.hs  Object.hs  OpenType.hs  Outlines.hs  Outlines.hs~  PDFIO.hs  PDFIO.hs~  Page.hs  StreamLex.hs  Structure.hs  Text.hs  Type1.hs
test/: EncryptSpec.hs  Golden.hs  Unit.hs
