cabal-version:       3.12
name:                hpdft
version:             0.4.1.0
synopsis:            A tool for looking through PDF file using Haskell
description:
    
    A command line PDF-to-text converter. It may take a much longer than other similar tools but could yield better results.
    
    This package can also serve as a library for working with text data in PDF files.
    You could write your own PDF-to-text converter for some particular PDF files, utilizing any meta data or special data structures of those.
    
homepage:            https://github.com/k16shikano/hpdft
license:             MIT
license-file:        LICENSE
author:              Keiichiro Shikano
maintainer:          k16.shikano@gmail.com
-- copyright:           
category:            PDF
build-type:          Simple
extra-source-files:  README.md
                     , CHANGELOG.md
                     , docs/0.3-roadmap.md
                     , docs/0.4-roadmap.md

data-dir:            data/

data-files:          map/Adobe-Japan1-6.map

                       
library
  hs-source-dirs:      src/
  exposed-modules:     PDF.PDFIO
                     , PDF.Document
                     , PDF.ContentStream
                     , PDF.Character
                     , PDF.Cmap
                     , PDF.Definition
                     , PDF.DocumentStructure
                     , PDF.Error
                     , PDF.Outlines
                     , PDF.Object
                     , PDF.OpenType
                     , PDF.CFF
                     , PDF.Encrypt
                     , PDF.Text
                     , PDF.Page
                     , PDF.Type1
                     , PDF.Matrix
                     , PDF.Interpret
                     , PDF.Layout
                     , PDF.Structure
  other-modules:       Paths_hpdft
  other-extensions:    OverloadedStrings
  build-depends:       attoparsec >= 0.14.4 && < 0.15
                     , base >= 4.20.0 && < 4.23
                     , binary >= 0.8.9 && < 0.9
                     , bytestring >= 0.11.5 && < 0.13
                     , containers >= 0.7 && < 0.9
                     , crypton >= 0.34 && < 0.36
                     , directory >= 1.3.9 && < 1.4
                     , file-embed >= 0.0.16 && < 0.1
                     , memory >= 0.18.0 && < 0.19
                     , optparse-applicative >= 0.18.1 && < 0.19
                     , parsec >= 3.1.18 && < 3.2
                     , semigroups >= 0.20 && < 0.21
                     , text >= 2.1.2 && < 2.2.2
                     , utf8-string >= 1.0.2 && < 1.1
                     , zlib >= 0.7.1 && < 0.8
  autogen-modules:   Paths_hpdft
  default-language:  Haskell2010
  buildable:         True

executable hpdft
  main-is:           hpdft.hs
  ghc-options:       -O2
  hs-source-dirs:    .
  other-modules:     Paths_hpdft
  other-extensions:    OverloadedStrings
  build-depends:       base >= 4.20.0 && < 4.23
                     , bytestring >= 0.11.5 && < 0.13
                     , hpdft
                     , memory >= 0.18.0 && < 0.19
                     , optparse-applicative >= 0.18.1 && < 0.19
                     , regex-base >= 0.94.0 && < 0.95
                     , regex-tdfa >= 1.3.2 && < 1.4
                     , semigroups >= 0.20 && < 0.21
                     , text >= 2.1.2 && < 2.2.2
                     , utf8-string >= 1.0.2 && < 1.1
  autogen-modules:   Paths_hpdft
  default-language:  Haskell2010
  buildable:         True

test-suite hpdft-golden
  type:                exitcode-stdio-1.0
  main-is:             Golden.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.20.0 && < 4.23
                     , bytestring >= 0.11.5 && < 0.13
                     , directory >= 1.3.9 && < 1.4
                     , filepath >= 1.5.2 && < 1.6
                     , hpdft
  default-language:    Haskell2010

test-suite hpdft-unit
  type:                exitcode-stdio-1.0
  main-is:             Unit.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.20.0 && < 4.23
                     , bytestring >= 0.11.5 && < 0.13
                     , containers >= 0.7 && < 0.9
                     , hpdft
                     , text >= 2.1.2 && < 2.2.2
  default-language:    Haskell2010

executable interpret-page
  main-is:             scripts/interpret_page.hs
  hs-source-dirs:      .
  build-depends:       base >= 4.20.0 && < 4.23
                     , hpdft
                     , text >= 2.1.2 && < 2.2.2
  default-language:    Haskell2010
  buildable:           True
