cabal-version:       3.8
name:                hpdft
version:             0.4.6.3
synopsis:            PDF parsing library and CLI for text, layout, diff, images, and forms
description:
    hpdft is a Haskell library and command-line tool for parsing PDF files.
    The library exposes document loading, geometry- and tagged-PDF text extraction,
    page-level paragraph regions, paragraph-level diff, image XObject export, and
    Form XObject extraction to standalone PDFs.
    The @hpdft@ executable provides the same features for shell workflows.
    See @docs/library.md@ for a usage guide and @examples/@ for sample programs.
homepage:            https://github.com/k16shikano/hpdft
license:             MIT
license-file:        LICENSE
author:              Keiichiro Shikano
maintainer:          k16.shikano@gmail.com
-- copyright:           
category:            PDF
build-type:          Simple
extra-source-files:  README.md
                     , CHANGELOG.md
                     , docs/library.md
                     , dev/README.md
                     , dev/performance-0.4.md
                     , dev/0.3-roadmap.md
                     , dev/0.4-roadmap.md
                     , dev/0.5-text-ux.md
                     , scripts/bench_book.sh
                     , scripts/bench_pages.hs
                     , examples/extract-text/Main.hs
                     , examples/page-api/Main.hs

data-dir:            data/

data-files:          map/Adobe-Japan1-6.map
                     , map/cp932.map
                     , map/jisx0208.map

source-repository head
  type:     git
  location: https://github.com/k16shikano/hpdft

                       
library
  hs-source-dirs:      src/
  exposed-modules:     PDF.PDFIO
                     , PDF.Document
                     , PDF.ContentStream
                     , PDF.Character
                     , PDF.Cmap
                     , PDF.Definition
                     , PDF.DocumentStructure
                     , PDF.Error
                     , PDF.Outlines
                     , PDF.Object
                     , PDF.OpenType
                     , PDF.CFF
                     , PDF.Encrypt
                     , PDF.Text
                     , PDF.Page
                     , PDF.Diff
                     , PDF.Image
                     , PDF.FormExtract
                     , PDF.Type1
                     , PDF.Matrix
                     , PDF.Interpret
                     , PDF.Layout
                     , PDF.Structure
  other-modules:       Paths_hpdft
  other-extensions:    OverloadedStrings
  build-depends:       array >= 0.5 && < 0.6
                     , attoparsec >= 0.14.4 && < 0.15
                     , base >= 4.18.0 && < 4.23
                     , binary >= 0.8.9 && < 0.9
                     , bytestring >= 0.11.4 && < 0.13
                     , containers >= 0.6.7 && < 0.9
                     , crypton >= 0.34 && < 0.36
                     , directory >= 1.3.8 && < 1.4
                     , dlist >= 1.0 && < 1.1
                     , file-embed >= 0.0.16 && < 0.1
                     , filepath >= 1.4.2 && < 1.6
                     , memory >= 0.18.0 && < 0.19
                     , optparse-applicative >= 0.18.1 && < 0.19
                     , parallel >= 3.2.2 && < 3.4
                     , deepseq >= 1.4.8 && < 1.6
                     , parsec >= 3.1.18 && < 3.2
                     , semigroups >= 0.20 && < 0.21
                     , text >= 2.0.2 && < 2.2.2
                     , utf8-string >= 1.0.2 && < 1.1
                     , zlib >= 0.7.1 && < 0.8
  autogen-modules:   Paths_hpdft
  default-language:  Haskell2010
  buildable:         True

executable hpdft
  main-is:           hpdft.hs
  ghc-options:       -O2 -threaded -rtsopts "-with-rtsopts=-N -A64m"
  hs-source-dirs:    .
  other-modules:     Paths_hpdft
                     , TuiPreview
                     , TuiScroll
  other-extensions:    OverloadedStrings
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.18.0 && < 4.23
                     , bytestring >= 0.11.4 && < 0.13
                     , hpdft
                     , memory >= 0.18.0 && < 0.19
                     , optparse-applicative >= 0.18.1 && < 0.19
                     , regex-base >= 0.94.0 && < 0.95
                     , regex-tdfa >= 1.3.2 && < 1.4
                     , semigroups >= 0.20 && < 0.21
                     , terminal-size >= 0.3 && < 0.4
                     , text >= 2.0.2 && < 2.2.2
                     , utf8-string >= 1.0.2 && < 1.1
  autogen-modules:   Paths_hpdft
  default-language:  Haskell2010
  buildable:         True

test-suite hpdft-golden
  type:                exitcode-stdio-1.0
  main-is:             Golden.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -A64m"
  build-depends:       base >= 4.18.0 && < 4.23
                     , bytestring >= 0.11.4 && < 0.13
                     , directory >= 1.3.8 && < 1.4
                     , filepath >= 1.4.2 && < 1.6
                     , hpdft
  default-language:    Haskell2010

test-suite hpdft-unit
  type:                exitcode-stdio-1.0
  main-is:             Unit.hs
  hs-source-dirs:      test
                     , .
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -A64m"
  build-depends:       base >= 4.18.0 && < 4.23
                     , bytestring >= 0.11.4 && < 0.13
                     , containers >= 0.6.7 && < 0.9
                     , directory >= 1.3.8 && < 1.4
                     , filepath >= 1.4.2 && < 1.6
                     , hpdft
                     , text >= 2.0.2 && < 2.2.2
  other-modules:       TuiScroll
  default-language:    Haskell2010

executable interpret-page
  main-is:             scripts/interpret_page.hs
  hs-source-dirs:      .
  build-depends:       base >= 4.18.0 && < 4.23
                     , hpdft
                     , text >= 2.0.2 && < 2.2.2
  default-language:    Haskell2010
  buildable:           True

executable extract-text
  main-is:             Main.hs
  hs-source-dirs:      examples/extract-text
  build-depends:       base >= 4.18.0 && < 4.23
                     , bytestring >= 0.11.4 && < 0.13
                     , directory >= 1.3.8 && < 1.4
                     , filepath >= 1.4.2 && < 1.6
                     , hpdft
  default-language:    Haskell2010
  buildable:           True

executable page-api
  main-is:             Main.hs
  hs-source-dirs:      examples/page-api
  build-depends:       base >= 4.18.0 && < 4.23
                     , directory >= 1.3.8 && < 1.4
                     , filepath >= 1.4.2 && < 1.6
                     , hpdft
                     , text >= 2.0.2 && < 2.2.2
  default-language:    Haskell2010
  buildable:           True
